objects/Student_group__c.object
<CustomObject>
    <fields>
        <fullName>Academic_department__c</fullName>
        <label>Academic department</label>
        <referenceTo>Academic_department__c</referenceTo>
        <relationshipLabel>student groups</relationshipLabel>
        <relationshipName>Student_groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education_Cost_Sum__c</fullName>
        <label>Education Cost Sum</label>
        <summarizedField>Student__c.Education_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Student__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>Student__c.Student_group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Scholarship_Sum__c</fullName>
        <label>Scholarship Sum</label>
        <summarizedField>Student__c.Scholarship_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Student__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Budget</value>
        </summaryFilterItems>
        <summaryForeignKey>Student__c.Student_group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Students_Number__c</fullName>
        <label>Students number</label>
        <summaryForeignKey>Student__c.Student_group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Student group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>student groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Number_of_students_validation</fullName>
        <active>true</active>
        <errorConditionFormula>Students_Number__c &gt;25</errorConditionFormula>
        <errorMessage>Too many students in the same group!</errorMessage>
    </validationRules>
</CustomObject>